fix all bugs and waiting for review))

--- a/src/index.html
+++ b/src/index.html
@@ -120,79 +120,83 @@
             Актуальні події
           </h2>
 
-          <article class="current-events__article">
+          <article class="grid current-events__article">
             <img
               class="current-events__article-image"
               src="./images/currentEventFirst.jpg"
               alt="Йду і повертаюсь"
             >
 
-            <div class="current-events__article-additional">
-              <p class="current-events__article-additional-name">
-                Виставка
-              </p>
+            <div class="current-events__article-description">
+              <div class="current-events__article-additional">
+                <p class="current-events__article-additional-name">
+                  Виставка
+                </p>
 
-              <p class="current-events__article-additional-date">
-                26.08-29.11.2019
+                <p class="current-events__article-additional-date">
+                  26.08-29.11.2019
+                </p>
+              </div>
+
+              <h3 class="title current-events__article-description-title">
+                Йду і повертаюсь
+              </h3>
+
+              <p class="current-events__article-description-text">
+                Національний Художній Музей України презентує
+                унікальну частину колекції Градобанку -
+                українське мистецтво другої половини 1980-1995 років.
               </p>
             </div>
-
-            <h3 class="title current-events__article-title">
-              Йду і повертаюсь
-            </h3>
-
-            <p class="current-events__article-text">
-              Національний Художній Музей України презентує
-              унікальну частину колекції Градобанку -
-              українське мистецтво другої половини 1980-1995 років.
-            </p>
           </article>
 
-          <article class="current-events__article current-events__article-next">
+          <article class="grid current-events__article">
             <img
               class="current-events__article-image"
               src="./images/currentEventSecond.jpg"
               alt="І спогади і мрії"
             >
 
-            <div class="current-events__article-additional">
-              <p class="current-events__article-additional-name">
-                Виставка
-              </p>
+            <div class="current-events__article-description">
+              <div class="current-events__article-additional">
+                <p class="current-events__article-additional-name">
+                  Виставка
+                </p>
 
-              <p class="current-events__article-additional-date">
-                26.08-29.11.2019
+                <p class="current-events__article-additional-date">
+                  26.08-29.11.2019
+                </p>
+              </div>
+
+              <h3 class="title current-events__article-description-title">
+                І спогади і мрії
+              </h3>
+
+              <p class="current-events__article-description-text">
+                Національний художній музей України до 100 річчя від дня народження 
+                видатної української художниці  Тетяни Яблонської  
+                відкриває ретроспективну ювілейну виставку «І спогади і мрії».
               </p>
             </div>
-
-            <h3 class="title current-events__article-title">
-              І спогади і мрії
-            </h3>
-
-            <p class="current-events__article-text">
-              Національний художній музей України до 100 річчя від дня народження
-              видатної української художниці  Тетяни Яблонської  відкриває ретроспективну ювілейну виставку «І спогади і мрії».
-            </p>
           </article>
         </div>
       </section>
 
       <section class="lecture">
-        <div class="container grid">
-          <div class="lecture__content">
-            <div class="lecture__additional">
-              <p class="lecture__name">
-                Лекція
-              </p>
-              <p class="lecture__date">
-                26/08/2019 - 11:00
-              </p>
-            </div>
-
-            <h2 class="title lecture__title">
-              Від класицизму до романтизму
-            </h2>
+        <div class="lecture__content">
+          <div class="lecture__additional">
+            <p class="lecture__name">
+              Лекція
+            </p>
+            
+            <p class="lecture__date">
+              26/08/2019 - 11:00
+            </p>
           </div>
+
+          <h2 class="title lecture__title">
+            Від класицизму до романтизму
+          </h2>
         </div>
       </section>
     </main>
