--- a/src/index.html
+++ b/src/index.html
@@ -44,7 +44,11 @@
         </p>
 
         <div class="header__square">
-          <img src="images/icons/white-arrow.svg" alt="Tickets" class="header__arrow">
+          <img
+            src="images/icons/white-arrow.svg"
+            alt="Tickets"
+            class="header__arrow"
+          >
         </div>
       </a>
 
@@ -53,7 +57,74 @@
       </h4>
     </header>
 
-    <main class="main page__main">
+    <div class="menu page-menu" id="nav">
+      <div class="menu__content">
+        <div class="menu__main">
+          <a href="#" class="menu__icon"></a>
+
+          <nav class="nav menu__nav">
+            <ul class="nav__list">
+              <li class="nav__item">
+                <a href="#gallery" class="nav__link">
+                  Галерея
+                </a>
+              </li>
+
+              <li class="nav__item">
+                <a href="#about" class="nav__link">
+                  Про Нас
+                </a>
+              </li>
+
+              <li class="nav__item">
+                <a href="#exhibition" class="nav__link">
+                  Виставки та події
+                </a>
+              </li>
+
+              <li class="nav__item">
+                <a href="#contacts" class="nav__link">
+                  Контакти
+                </a>
+              </li>
+            </ul>
+          </nav>
+        </div>
+
+        <div class="menu__line"></div>
+
+        <div class="menu__container">
+          <p class="menu__subtitle">
+            Графік роботи
+          </p>
+
+          <div class="menu__shedule">
+            <p class="menu__text menu__text--1">
+              <span class="menu__time">12:00 — 20:00</span> середа
+              <br>
+              <span class="menu__time">12:00 — 20:00</span> четвер
+              <br>
+              <span class="menu__time">12:00 — 20:00</span> п’ятниця
+              <br>
+              <span class="menu__time">11:00 — 19:00</span> субота
+              <br>
+              <span class="menu__time">11:00 — 19:00</span> неділя
+            </p>
+
+            <p class="menu__text menu__text--2">
+              <span class="menu__time">Вихідні:</span> понеділок, вівторок
+              <br>
+              Каса припиняє роботу за 1 годину
+              до закриття музею
+            </p>
+          </div>
+        </div>
+      </div>
+
+      <div class="menu__background"></div>
+    </div>
+
+    <main class="page__main">
       
     </main>
 
