section with form was added

--- a/src/index.html
+++ b/src/index.html
@@ -173,8 +173,8 @@
               </h3>
 
               <p class="current-events__article-description-text">
-                Національний художній музей України до 100 річчя від дня народження 
-                видатної української художниці  Тетяни Яблонської  
+                Національний художній музей України до 100 річчя від дня народження
+                видатної української художниці  Тетяни Яблонської
                 відкриває ретроспективну ювілейну виставку «І спогади і мрії».
               </p>
             </div>
@@ -188,7 +188,7 @@
             <p class="lecture__name">
               Лекція
             </p>
-            
+
             <p class="lecture__date">
               26/08/2019 - 11:00
             </p>
@@ -197,6 +197,33 @@
           <h2 class="title lecture__title">
             Від класицизму до романтизму
           </h2>
+        </div>
+      </section>
+
+      <section class="subscribe">
+        <div class="container grid">
+          <h2 class="title subscribe__title">
+            Підписка
+          </h2>
+
+          <p class="subscribe__description">
+            Бути в курсі всіх актуальних подій та останніх новин.
+          </p>
+
+          <form
+            class="subscribe__form"
+            action="#"
+            method="post"
+          >
+            <input
+              class="title subscribe__form-input"
+              type="email"
+              placeholder="E-mail"
+              required
+            >
+
+            <button class="subscribe__form-button" type="submit"></button>
+          </form>
         </div>
       </section>
     </main>
