finaly form fix

--- a/src/index.html
+++ b/src/index.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="./styles/main.scss">
     <link rel="icon" href="./images/logo.svg">
 
-    <script src="scripts/main.js"></script>
+    <!-- <script src="scripts/main.js"></script> -->
   </head>
   <body class="page__body">
     <header class="header">
@@ -226,5 +226,7 @@
         </div>
       </section>
     </main>
+
+    <script src="scripts/main.js"></script>
   </body>
 </html>
