--- a/src/index.html
+++ b/src/index.html
@@ -5,9 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Title</title>
     <link rel="icon" href="images/icons/logo.svg">
+    <!-- swiper-->
+    <!-- <link
+    rel="stylesheet"
+    href="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.css"> -->
     <link rel="stylesheet" href="./styles/main.scss">
   </head>
   <body class="page__body">
+
     <div class="menu rez" id="menu">
       <div class="container">
         <a
@@ -21,7 +26,7 @@
             <ul class="menu__list">
               <li class="menu__item">
                 <a
-                  href="#galery"
+                  href="#gallery"
                   class="menu__link"
                 >
                   Галерея
@@ -86,7 +91,7 @@
       </div>
     </div>
 
-    <header class="header">
+    <header class="header" id="header">
       <div class="container">
         <div class="header__content grid">
           <div class="header__name
@@ -107,20 +112,14 @@
           <a href="#tickets" class="button header__button
             grid--tablet--1-4
             grid--desktop--3-6">
-            <div class="button__name">
-              КВИТКИ
-            </div>
-
-            <div class="button__img">
-              <img src="images/icons/btn.svg" alt="button">
-            </div>
+            <button class="button__img"></button>
           </a>
 
-          <div class="header__events">
+          <div class="header__palka">
             <img
               src="images/icons/palka.svg"
               alt="rectangle"
-              class="header__events--rectangle"
+              class="header__palka--rectangle"
             >
 
             <a href="#">
@@ -152,6 +151,368 @@
       </div>
     </header>
 
+    <section class="events" id="events">
+      <div class="container">
+        <h2 class="events__title">
+          Актуальні події
+        </h2>
+
+        <section class="exhibition">
+          <img
+            src="images/exhibition1.png"
+            alt="exhibition image"
+            class="exhibition__image"
+          >
+
+          <div class="exhibition__grid">
+            <div class="exhibition__subtitle events__subtitle">
+              <div class="events__description">
+                виставка
+              </div>
+              <div class="events__time">
+                26.08-29.11.2019
+              </div>
+            </div>
+            <h3 class="exhibition__title subtitle__title">
+              Йду і повертаюсь
+            </h3>
+            <p class="exhibition__text">
+              Національний Художній Музей України презентує унікальну частину колекції Градобанку - українське мистецтво другої половини 1980-1995 років.
+            </p>
+          </div>
+        </section>
+
+        <section class="exhibition">
+          <img
+            src="images/exhibition2.png"
+            alt="exhibition image"
+            class="exhibition__image"
+          >
+
+          <div class="exhibition__grid">
+            <div class="exhibition__subtitle events__subtitle">
+              <div class="events__description">
+                виставка
+              </div>
+              <div class="events__time">
+                26.08-29.11.2019
+              </div>
+            </div>
+            <h3 class="exhibition__title subtitle__title">
+              І спогади і мрії
+            </h3>
+            <p class="exhibition__text">
+              Національний художній музей України до 100 річчя від дня народження   видатної української художниці  Тетяни Яблонської  відкриває ретроспективну ювілейну виставку «І спогади і мрії».
+            </p>
+          </div>
+        </section>
+      </div>
+
+      <div class="lecture">
+        <img
+          src="images/lecture.png"
+          alt="lecture image"
+          class="lecture__image"
+        >
+
+        <div class="lecture__main">
+          <div class="lecture__subtitle events__subtitle">
+            <div class="events__description">
+              лекція
+            </div>
+            <div class="lecture__time events__time">
+              26/08/2019 - 11:00
+            </div>
+          </div>
+          <h3 class="lecture__title subtitle__title">
+            Від класицизму до романтизму
+          </h3>
+        </div>
+      </div>
+    </section>
+
+    <section class="gallery" id="gallery">
+
+      <div class="container">
+        <h2 class="gallery__title">
+          Галерея
+        </h2>
+      </div>
+
+      <div class="gallery__main">
+        <div class="gallery__image">
+          <img
+            src="images/gallary1.png"
+            alt="gallery"
+          >
+        </div>
+
+        <div class="gallery__image">
+          <img
+            src="images/gallary2.png"
+            alt="gallery"
+          >
+        </div>
+
+        <div class="gallery__image">
+          <img
+            src="images/gallary3.png"
+            alt="gallery"
+          >
+        </div>
+
+        <div class="gallery__image">
+          <img
+            src="images/gallary4.png"
+            alt="gallery"
+          >
+        </div>
+      </div>
+
+      <div class="gallery__pagination">
+        <span class="gallery__pagination--item gallery__pagination--item--active"></span>
+        <span class="gallery__pagination--item"></span>
+        <span class="gallery__pagination--item"></span>
+        <span class="gallery__pagination--item"></span>
+      </div>
+
+      <!-- swiper-->
+      <!-- <div class="swiper">
+        <div class="swiper-wrapper grid-col">
+          <div class="swiper-slide">
+            <img
+              src="images/gallary1.png"
+              alt="galery image"
+              class="swiper-image"
+            >
+          </div>
+
+          <div class="swiper-slide">
+            <img
+              src="images/gallary2.png"
+              alt="galery image"
+              class="swiper-image"
+            >
+          </div>
+
+          <div class="swiper-slide">
+            <img
+              src="images/gallary3.png"
+              alt="galery image"
+              class="swiper-image"
+            >
+          </div>
+
+          <div class="swiper-slide">
+            <img
+              src="images/gallary4.png"
+              alt="galery image"
+              class="swiper-image"
+            >
+          </div>
+        </div>
+        <div class="swiper-pagination"></div>
+      </div> -->
+    </section>
+
+    <section class="subscription" id="about">
+      <div class="container">
+        <h2 class="subscription__title">
+          Підписка
+        </h2>
+        <p class="subscription__description">Бути в курсі всіх актуальних подій та останніх новин.</p>
+        <form
+          action="#"
+          method="get"
+          class="subscription__form grid"
+        >
+          <label class="subscription__input
+          grid--1-2
+          grid--tablet--2-6
+          grid--desktop--4-9">
+            <input
+              type="email"
+              class="subscription__email"
+              placeholder="E-mail"
+            >
+          </label>
+
+          <button
+            type="reset"
+            class="button__img button__img--orange
+            grid--tablet--6-7
+            grid--desktop--9-10"
+          >
+          </button>
+        </form>
+      </div>
+    </section>
+
+    <footer class="footer" id="contact">
+      <div class="container">
+        <div class="footer__main grid">
+          <div class="footer__icons
+            grid--1-3
+            grid--tablet--1-2
+            grid--desktop--1-3"
+          >
+            <img
+              src="images/icons/logo.svg"
+              alt="logo"
+              class="footer__logo logo"
+            >
+
+            <div class="footer__messengers">
+              <a
+                href="https://uk-ua.facebook.com/"
+                target="_blank"
+                class="footer__messenger footer__messenger--facebook"
+              >
+              </a>
+
+              <a
+                href="https://www.instagram.com/"
+                target="_blank"
+                class="footer__messenger footer__messenger--instagram"
+              >
+              </a>
+            </div>
+          </div>
+
+          <div class="footer__schedule
+            grid--1-2
+            grid--tablet--2-4
+            grid--desktop--3-5"
+          >
+            <div class="footer__time">
+              <p class="footer__time-title">
+                Графік роботи
+              </p>
+
+              <p class="footer__time--timetable">
+                <span class="bold">12:00 — 20:00</span> середа<br>
+                <span class="bold">12:00 — 20:00</span> четвер<br>
+                <span class="bold">12:00 — 20:00</span> п’ятниця<br>
+                <span class="bold">11:00 — 19:00</span> субота<br>
+                <span class="bold">11:00 — 19:00</span> неділя<br>
+              </p>
+            </div>
+
+            <div class="footer__weekend">
+              <span class="bold">Вихідні:</span> понеділок, вівторок<br>
+              Каса припиняє роботу за 1 годину
+              до закриття музею
+            </div>
+          </div>
+
+          <div class="footer__contact
+            grid--2-3
+            grid--tablet--4-6
+            grid--desktop--5-7"
+          >
+            <ul>
+              <li class="footer__time-title">
+                Контакти:
+              </li>
+
+              <li class="footer__time-item">
+                <a href="https://goo.gl/maps/7xg1i9ku1jGZGvLp9" target="_blank">
+                  вул. М. Грушевського, 6; Київ, 01001
+                </a>
+              </li>
+
+              <li class="footer__time-item">
+                <a href="tel: +38 (044) 278-13-57">
+                  тел. +38 (044) 278-13-57
+                </a>
+              </li>
+
+              <li class="footer__time-item">
+                <a href="fax: +38 (044) 278-74-54">
+                  факс +38 (044) 278-74-54
+                </a>
+              </li>
+
+              <li class="footer__time-item">
+                <a href="mailto: info@namu.kiev.ua">
+                  e-mail: info@namu.kiev.ua
+                </a>
+              </li>
+            </ul>
+          </div>
+
+          <div class="footer__palka
+            grid--1-3
+            grid--tablet--2-6
+            grid--desktop--7-8"
+          >
+          </div>
+
+          <ul class="footer__list
+            grid--1-2
+            grid--tablet--2-4
+            grid--desktop--8-10"
+          >
+            <li class="footer__item">
+              <a
+                href="#gallery"
+                class="footer__link"
+              >
+                Галерея
+              </a>
+            </li>
+
+            <li class="footer__item">
+              <a
+                href="#events"
+                class="footer__link"
+              >
+                Виставки та події
+              </a>
+            </li>
+          </ul>
+
+          <ul class="footer__list
+            grid--2-3
+            grid--tablet--4-6
+            grid--desktop--10-12"
+          >
+            <li class="footer__item">
+              <a
+                href="#about"
+                class="footer__link"
+              >
+                Про Нас
+              </a>
+            </li>
+
+            <li class="footer__item">
+              <a
+                href="#contact"
+                class="footer__link"
+              >
+                Контакти
+              </a>
+            </li>
+          </ul>
+        </div>
+
+        <div class="footer__designed">
+          <div class="footer__designed-text">
+            Designed by Zhyriada Marina
+          </div>
+
+          <div class="footer__designed-text">
+            Copyright &#169; 2019. All Rights Reserved.
+          </div>
+        </div>
+      </div>
+    </footer>
+
+    <a href="#header" class="go-up"></a>
+
+    <!-- swiper -->
+    <!-- <script src="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.js"></script> -->
     <script type="text/javascript" src="scripts/main.js"></script>
   </body>
 </html>
