footer was added

--- a/src/index.html
+++ b/src/index.html
@@ -13,10 +13,9 @@
     <link rel="stylesheet" href="./styles/main.scss">
     <link rel="icon" href="./images/logo.svg">
 
-    <!-- <script src="scripts/main.js"></script> -->
   </head>
   <body class="page__body">
-    <header class="header">
+    <header class="header" id="header">
       <div class="container grid">
         <div class="header__top-actions">
           <a class="icon icon--menu" href="#menu"></a>
@@ -62,7 +61,7 @@
             </li>
 
             <li class="menu__list-item">
-              <a href="#" class="menu__link">
+              <a href="#footer" class="menu__link">
                 Контакти
               </a>
             </li>
@@ -226,6 +225,131 @@
         </div>
       </section>
     </main>
+
+    <footer class="footer" id="#footer">
+      <div class="container grid">
+        <div class="footer__links">
+          <a href="#" class="footer__logo">
+            <img
+              class="footer__logo-image"
+              src="./images/logo.svg"
+              alt="NAMU logo"
+            >
+          </a>
+
+          <div class="footer__social">
+            <a href="#" class="icon icon--facebook"></a>
+            <a href="#" class="icon icon--instagram"></a>
+          </div>
+        </div>
+
+        <div class="footer__info">
+          <div class="footer__scheldue">
+            <p class="footer__scheldue-title">
+              Графік роботи
+            </p>
+
+            <ul class="footer__scheldue-list">
+              <li class="footer__scheldue-item">
+                <p class="footer__scheldue-text">
+                  <strong>12:00 — 20:00</strong> середа
+                </p>
+              </li>
+
+              <li class="footer__scheldue-item">
+                <p class="footer__scheldue-text">
+                  <strong>12:00 — 20:00</strong> четвер
+                </p>
+              </li>
+
+              <li class="footer__scheldue-item">
+                <p class="footer__scheldue-text">
+                  <strong>12:00 — 20:00</strong> п’ятниця
+                </p>
+              </li>
+
+              <li class="footer__scheldue-item">
+                <p class="footer__scheldue-text">
+                  <strong>11:00 — 19:00</strong> субота
+                </p>
+              </li>
+
+              <li class="footer__scheldue-item">
+                <p class="footer__scheldue-text">
+                  <strong>11:00 — 19:00</strong> неділя
+                </p>
+              </li>
+            </ul>
+
+            <p class="footer__scheldue-additional">
+              <strong>Вихідні:</strong> понеділок, вівторок
+              Каса припиняє роботу за 1 годину
+              до закриття музею
+            </p>
+          </div>
+
+          <div class="footer__contacts">
+            <p class="footer__contacts-title">
+              Контакти:
+            </p>
+
+            <ul class="footer__contacts-list">
+              <li class="footer__contacts-item">
+                <a href="https://goo.gl/maps/hUATkK8CJtYZkMAt9" class="footer__contacts-link">
+                  вул. М. Грушевського, 6; Київ, 01001
+                </a>
+              </li>
+
+              <li class="footer__contacts-item">
+                <a href="tel:+380442781357" class="footer__contacts-link">
+                  тел. +38 (044) 278-13-57
+                </a>
+              </li>
+
+              <li class="footer__contacts-item">
+                <a href="tel:+380442787454" class="footer__contacts-link">
+                  факс. +38 (044) 278-74-54
+                </a>
+              </li>
+
+              <li class="footer__contacts-item">
+                <a href="mailto:info@namu.kiev.ua" class="footer__contacts-link">
+                  e-mail: info@namu.kiev.ua
+                </a>
+              </li>
+            </ul>
+          </div>
+        </div>
+
+        <a href="#header" class="footer__button"></a>
+
+        <ul class="footer__nav-list">
+          <li class="footer__nav-item">
+            <a href="#" class="footer__nav-link">
+              Галерея
+            </a>
+          </li>
+
+          <li class="footer__nav-item">
+            <a href="#" class="footer__nav-link">
+              Про Нас
+            </a>
+          </li>
+
+          <li class="footer__nav-item">
+            <a href="#current-events" class="footer__nav-link">
+              Виставки та події
+            </a>
+          </li>
+
+          <li class="footer__nav-item">
+            <a href="#footer" class="footer__nav-link">
+              Контакти
+            </a>
+          </li>
+        </ul>
+      </div>
+    </footer>
 
     <script src="scripts/main.js"></script>
   </body>
