forgot to add copyright

--- a/src/index.html
+++ b/src/index.html
@@ -348,6 +348,16 @@
             </a>
           </li>
         </ul>
+
+        <div class="footer__copyright">
+          <p class="footer__copyright-text">
+            Copyright &copy; 2019. All Rights Reserved.
+          </p>
+
+          <p class="footer__copyright-text">
+            Designed by Zhyriada Marina
+          </p>
+        </div>
       </div>
     </footer>
 
