--- a/src/index.html
+++ b/src/index.html
@@ -1,13 +1,352 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="page">
+
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Title</title>
+    <title>Museum</title>
     <link rel="stylesheet" href="./styles/main.scss">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.css">
   </head>
-  <body>
-    <h1>Hello Mate Academy</h1>
+
+  <body class="page__body">
+    <header class="header page__header" id="header">
+      <div class="container">
+        <div class="header__top">
+          <div class="top-action">
+            <a href="#menu" class="top-action__burger"></a>
+            <a href="#header" class="top-action__logo"></a>
+            <a href="#" class="top-action__cross"></a>
+          </div>
+        </div>
+        <div class="header__content">
+          <div class="header__title">
+            художній музей
+          </div>
+          <div class="header__button">
+            <div class="header__action">події</div>
+            <div class="button">
+              <div class="button__text">
+                квитки
+              </div>
+              <div class="button__arrow"></div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </header>
+
+    <nav class="menu page__menu" id="menu">
+      <div class="menu__container">
+        <div class="menu__left">
+          <a href="#" class="menu__cross"></a>
+          <ul class="menu__list">
+            <li class="menu__item">
+              <a href="#gallery" class="menu__link">
+                Галерея
+              </a>
+            </li>
+            <li class="menu__item">
+              <a href="#header" class="menu__link">
+                Про Нас
+              </a>
+            </li>
+            <li class="menu__item">
+              <a href="#events" class="menu__link">
+                Виставки та
+                <br>
+                події
+              </a>
+            </li>
+            <li class="menu__item">
+              <a href="#contact" class="menu__link">
+                Контакти
+              </a>
+            </li>
+          </ul>
+        </div>
+        <div class="menu__right">
+          <ul class="menu__subList">
+            <li class="menu__subList-item">
+              Графік роботи
+            </li>
+            <li class="menu__subList-item">
+              <strong>
+                12:00 — 20:00
+              </strong>
+              середа
+            </li>
+            <li class="menu__subList-item">
+              <strong>
+                12:00 — 20:00
+              </strong>
+              четвер
+            </li>
+            <li class="menu__subList-item">
+              <strong>
+                12:00 — 20:00
+              </strong>
+              п’ятниця
+            </li>
+            <li class="menu__subList-item">
+              <strong>
+                11:00 — 19:00
+              </strong>
+              субота
+            </li>
+            <li class="menu__subList-item">
+              <strong>
+                11:00 — 19:00
+              </strong>
+              неділя
+            </li>
+          </ul>
+          <div class="menu__text">
+            <strong>
+              Вихідні
+            </strong>
+            : понеділок, вівторок
+            Каса припиняє роботу за 1 годину
+            до закриття музею
+          </div>
+        </div>
+      </div>
+    </nav>
+
+    <main>
+      <section class="current-events page__current-events" id="events">
+        <div class="container">
+          <div class="title">
+            Актуальні події
+          </div>
+          <div class="current-events___wrapper">
+            <article class="current-events__card">
+              <div class="current-events__photo">
+                <img src="images/event1.png" alt="event1">
+              </div>
+              <div class="current-events__text">
+                <div class="current-events__text-top">
+                  <div class="current-events__text-top--left">
+                    виставка
+                  </div>
+                  <div class="current-events__text-top--right">
+                    26.08-29.11.2019
+                  </div>
+                </div>
+                <div class="current-events__text-title">
+                  <div class="current-events__text-title--text">Йду і повертаюсь</div>
+                  <div class="current-events__text-title--squere"></div>
+                </div>
+                <div class="current-events__text-subtitle">
+                  Національний Художній Музей України презентує унікальну частину колекції Градобанку - українське
+                  мистецтво другої половини 1980-1995 років.
+                </div>
+              </div>
+            </article>
+            <article class="current-events__card">
+              <div class="current-events__photo">
+                <img src="images/event2.png" alt="event1">
+              </div>
+              <div class="current-events__text">
+                <div class="current-events__text-top">
+                  <div class="current-events__text-top--left">
+                    виставка
+                  </div>
+                  <div class="current-events__text-top--right">
+                    26.08-29.11.2019
+                  </div>
+                </div>
+                <div class="current-events__text-title">
+                  <div class="current-events__text-title--text">
+                    І спогади і мрії
+                  </div>
+                  <div class="current-events__text-title--squere"></div>
+                </div>
+                <div class="current-events__text-subtitle">
+                  Національний художній музей України до 100 річчя від дня народження видатної української художниці
+                  Тетяни Яблонської відкриває ретроспективну ювілейну виставку «І спогади і мрії».
+                </div>
+              </div>
+            </article>
+          </div>
+        </div>
+      </section>
+
+      <section class="lecture page__lecture">
+        <div class="container">
+          <div class="lecture__card">
+            <div class="lecture__top">
+              <div class="lecture__top--text">
+                лекція
+              </div>
+              <div class="lecture__top--date">
+                26/08/2019 - 11:00
+              </div>
+            </div>
+            <div class="lecture__title">
+              Від класицизму до романтизму
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <section class="gallery page__gallery">
+        <div class="container">
+          <div class="gallery__title title">
+            Галерея
+          </div>
+          <div class="swiper-container">
+            <div class="swiper">
+              <div class="swiper-wrapper">
+                <div class="swiper-slide">
+                  <img src="images/slider/slide1.png" alt="slide1">
+                </div>
+                <div class="swiper-slide">
+                  <img src="images/slider/slide2.png" alt="slide2">
+                </div>
+                <div class="swiper-slide">
+                  <img src="images/slider/slide3.png" alt="slide3">
+                </div>
+                <div class="swiper-slide">
+                  <img src="images/slider/slide4.png" alt="slide4">
+                </div>
+              </div>
+              <div class="swiper-pagination"></div>
+
+            </div>
+          </div>
+          <div class="gallery__desktop">
+            <div class="grid">
+              <img
+                src="images/slider/slide1.png"
+                alt="slide1.png"
+                class="gallery__slide-first grid__item--desktop-1-4"
+              >
+              <img src="images/slider/slide2.png" alt="slide1.png"
+                class="gallery__slide-second grid__item--desktop-5-12">
+              <img src="images/slider/slide3.png" alt="slide1.png"
+                class="gallery__slide-threeth grid__item--desktop-1-8">
+              <img src="images/slider/slide4.png" alt="slide1.png"
+                class="gallery__slide-fourth grid__item--desktop-9-12">
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <section class="follow">
+        <div class="container">
+          <div class="follow__title">
+            Підписка
+          </div>
+          <div class="follow__subtitle">
+            Бути в курсі всіх актуальних подій та останніх новин.
+          </div>
+          <form action="#" class="follow__form">
+            <input
+              type="email"
+              placeholder="E-mail"
+              class="follow__form--input"
+            >
+            <button type="submit" class="follow__form--btn">
+            </button>
+          </form>
+        </div>
+      </section>
+    </main>
+
+    <footer class="footer">
+      <div class="container">
+        <div class="grid footer__content">
+          <div class="footer__logo grid__item--phone-1-2 grid__item--tablet-1-1 grid__item--desktop-1-1">
+            <a href="#" class="footer__logo--icon"></a>
+            <div class="footer__socials">
+              <a
+                href="https://uk-ua.facebook.com/"
+                class="footer__icon footer__icon--facebook"
+                target="_blank"
+              ></a>
+              <a
+                href="https://www.instagram.com/"
+                class="footer__icon footer__icon--instagram"
+                target="_blank"
+              ></a>
+            </div>
+          </div>
+          <div class="footer__schedule grid__item--phone-1-1 grid__item--tablet-2-3 grid__item--desktop-3-4">
+            <div class="footer__schedule--title">
+              Графік роботи
+            </div>
+            <ul class="footer__schedule-list">
+              <li class="footer__item">
+                <strong>12:00 — 20:00</strong> середа
+              </li>
+              <li class="footer__item">
+                <strong>12:00 — 20:00</strong> четвер
+              </li>
+              <li class="footer__item">
+                <strong>12:00 — 20:00</strong> п’ятниця
+              </li>
+              <li class="footer__item">
+                <strong>11:00 — 19:00</strong> субота
+              </li>
+              <li class="footer__item footer__item--sunday">
+                <strong>11:00 — 19:00</strong> неділя
+              </li>
+              <li class="footer__item">
+                <span class="footer__item--weekend">Вихідні:</span> понеділок, вівторок
+                Каса припиняє роботу за 1 годину
+                до закриття музею
+              </li>
+            </ul>
+          </div>
+          <div class="footer__contact grid__item--phone-2-2 grid__item--tablet-4-5 grid__item--desktop-5-6"
+            id="contact">
+            <div class="footer__contact--title">
+              Контакти:
+            </div>
+            <a href="https://goo.gl/maps/kzQGWCwCWSqmYyAEA" class="footer__contact--adress">
+              вул. М. Грушевського, 6; Київ, 01001
+            </a>
+            <a href="tel:+380442781357" class="footer__contact--tel">
+              тел. +38 (044) 278-13-57
+            </a>
+            <a href="fax:+380442787454" class="footer__contact--fax">
+              факс +38 (044) 278-74-54
+            </a>
+            <a href="e-mail:info@namu.kiev.ua" class="footer__contact--email">
+              e-mail: info@namu.kiev.ua
+            </a>
+          </div>
+          <div class="footer__line grid__item--phone-1-2 grid__item--tablet-2-5 grid__item--desktop-7-7"></div>
+          <div class="footer__nav grid__item--phone-1-2 grid__item--tablet-2-4 grid__item--desktop-8-10">
+            <a href="#" class="footer__nav--link">
+              Галерея
+            </a>
+            <a href="#header" class="footer__nav--link">
+              Про Нас
+            </a>
+            <a href="#events" class="footer__nav--link">
+              Виставки та події
+            </a>
+            <a href="#contact" class="footer__nav--link">
+              Контакти
+            </a>
+          </div>
+        </div>
+        <div class="footer__desc">
+          <div class="footer__design">
+            Designed by Zhyriada Marina
+          </div>
+          <div class="footer__copy">
+            Copyright © 2019. All Rights Reserved.
+          </div>
+        </div>
+        <a href="#header" class="footer__up"></a>
+      </div>
+    </footer>
+
+    <script src="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.js"></script>
     <script type="text/javascript" src="scripts/main.js"></script>
   </body>
+
 </html>
