created museum layout (needs to be accomplished)

--- a/src/index.html
+++ b/src/index.html
@@ -21,6 +21,12 @@
           clickable: true,
           bulletActiveClass: 'swiper-bullets-active',
         },
+
+        breakpoints: {
+          640: {
+            slidesPerView: 2
+          }
+        }
       });
     </script>
 
@@ -150,8 +156,8 @@
               alt="Woman and bird"
               class="events__image events__image--full-screen"
               >
-              <div class="events__content">
-                <div class="events__top">
+              <div class="events__content events__content--highlighted-event">
+                <div class="events__top events__top--highlighted-event">
                   <span class="events__type">
                     Лекція
                   </span>
@@ -159,8 +165,8 @@
                     26/08/2019 - 11:00
                   </span>
                 </div>
-                <p class="events__name">
-                  Від класицизму до романтизму
+                <p class="events__name events__name--highlighted-event">
+                  Від класицизму до<br>романтизму
                 </p>
               </div>
             </li>
@@ -204,6 +210,34 @@
             </div>
             <div class="swiper-pagination"></div>
           </div>
+
+          <div class="gallery__desktop">
+            <div class="gallery__photo-row">
+              <img
+               src="./images/ukrainian-woman.jpg"
+               alt="ukrainian woman"
+               class="gallery__long-photo"
+              >
+              <img
+               src="./images/winter-picture.jpg"
+               alt="winter picture"
+               class="gallery__broad-photo"
+              >
+            </div>
+            <div class="gallery__photo-row">
+              <img
+               src="./images/girl-on-a-bench.jpg"
+               alt="girl on a bench"
+               class="gallery__broad-photo"
+              >
+              <img
+               src="./images/beach-waves-picture.jpg"
+               alt="beach waves picture"
+               class="gallery__long-photo"
+              >
+            </div>
+          </div>
+
         </div>
       </section>
       <section class="section follow" id="subscribe">
@@ -250,16 +284,11 @@
             <div class="footer__timetable">
               <p class="footer__title">Графік роботи</p>
               <ul class="footer__open-hours">
-                <li class="footer__time">12:00 — 20:00</li>
-                <li class="footer__day">середа</li>
-                <li class="footer__time">12:00 — 20:00</li>
-                <li class="footer__day">четвер</li>
-                <li class="footer__time">12:00 — 20:00</li>
-                <li class="footer__day">пʼятниця</li>
-                <li class="footer__time">11:00 — 19:00</li>
-                <li class="footer__day">субота</li>
-                <li class="footer__time">11:00 — 19:00</li>
-                <li class="footer__day">неділя</li>
+                <li class="footer__time">12:00 — 20:00 <span class="footer__day">середа</span></li>
+                <li class="footer__time">12:00 — 20:00 <span class="footer__day">четвер</span></li>
+                <li class="footer__time">12:00 — 20:00 <span class="footer__day">пʼятниця</span></li>
+                <li class="footer__time">11:00 — 19:00 <span class="footer__day">субота</span></li>
+                <li class="footer__time">11:00 — 19:00 <span class="footer__day">неділя</span></li>
               </ul>
               <p class="footer__days-off">
                 Вихідні понеділок, вівторок<br>
@@ -281,7 +310,7 @@
 
           <a href="#" class="footer__go-up">
             <img
-             src="./images/arrow-up.svg"
+             src="./images/arrow-up(1).svg"
              alt="go up arrow"
             >
           </a>
