--- a/src/index.html
+++ b/src/index.html
@@ -1,13 +1,53 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="page">
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Title</title>
+    <title>Museum</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:ital,wght@0,500;0,600;1,300;1,400&family=Inter:wght@400;700&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
+    <link rel="icon" href="./images/logo.svg">
     <link rel="stylesheet" href="./styles/main.scss">
-  </head>
-  <body>
-    <h1>Hello Mate Academy</h1>
     <script type="text/javascript" src="scripts/main.js"></script>
+  </head>
+  <body class="page__body">
+    <header class="header">
+      <div class="container">
+        <div class="header__nav">
+          <a href="#" class="header__menu-opener">
+            <img src="./images/menu.svg" alt="menu">
+          </a>
+          
+          <a href="#" class="logo">
+            <img 
+              class="logo__image"
+              src="./images/logo.svg"
+              alt="museum">
+          </a>
+        </div>
+      </div>
+    </header>
+
+    <main class="main__content">
+      <div class="museum">
+        <h1 class="museum__title">
+          ХУДОЖНІЙ
+          <br>
+          МУЗЕЙ
+        </h1>
+  
+        <button class="button button--text">КВИТКИ</button>
+
+        <div class="museum__events">
+          <a href="#" class="museum__events--text">ПОДІЇ</a>
+          <div class="museum__events--line"></div>
+        </div>
+        
+      </div>
+    </main>
   </body>
 </html>
