added some changes to effects

--- a/src/index.html
+++ b/src/index.html
@@ -33,6 +33,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@300;400;500;700&family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
+    <link rel="shortcut icon" href="./images/favicon.svg">
     <link rel="stylesheet" href="./styles/main.scss">
   </head>
   <body class="page__body">
@@ -46,7 +47,7 @@
             </a>
           </div>
           <h1 class="header__title">ХУДОЖНІЙ<br>МУЗЕЙ</h1>
-          <a href="#tickets" class="header__link link">
+          <a href="#events" class="header__link link">
             <div class="link__title">КВИТКИ</div>
             <div class="link__button link__button--white">
               <img src="./images/arrow-button-white.svg" alt="arrow icon">
@@ -255,6 +256,7 @@
                name="email"
                class="follow__input"
                placeholder="E-mail"
+               required
               >
               <button type="submit" class="follow__button">
                 <img src="./images/arrow-button.svg" alt="arrow icon">
@@ -299,12 +301,15 @@
 
             <div class="footer__contacts" id="contacts">
               <p class="footer__title">Контакти:</p>
-              <p class="footer__adress">
-                вул. М. Грушевського, 6; Київ, 01001<br>
-                тел. +38 (044) 278-13-57<br>
-                факс +38 (044) 278-74-54<br>
-                e-mail: info@namu.kiev.ua
-              </p>
+              <a
+               href="https://goo.gl/maps/hMTiMdUgK9kp8bka6"
+               class="footer__contact"
+               target="_blank">
+               вул. М. Грушевського, 6; Київ, 01001
+              </a><br>
+              <a href="tel:+38 (044) 278-13-57" class="footer__contact">тел. +38 (044) 278-13-57</a><br>
+              <a href="fax:+38 (044) 278-74-54" class="footer__contact">факс +38 (044) 278-74-54</a><br>
+              <a href="mailto:info@namu.kiev.ua" class="footer__contact">e-mail: info@namu.kiev.ua</a>
             </div>
           </div>
 
