--- a/src/index.html
+++ b/src/index.html
@@ -45,36 +45,59 @@
       </div>
     </header>
 
-    <nav class="menu page__menu" id="menu">
+    <nav class="page__menu menu" id="menu">
       <div class="container">
-        <div class="top-actions">
-          <div class="grid grid--desktop">
-            <a href="#" class="icon icon__cross grid__item--tablet-1-1"></a>
-            <a href="#" class="logo logo__menu grid__item--tablet-4-5 grid__item--desktop-6-7"></a>
+        <div class="menu__content">
+          <div class="menu__nav nav">
+            <div class="menu__cross">
+              <a href="#" class="menu__cross-icon"></a>
+            </div>
+            <ul class="nav__item">
+              <li class="nav__list">
+                <a href="#gallery" class="nav__link">Галерея</a>
+              </li>
+              <li class="nav__list">
+                <a href="#events" class="nav__link">Виставки та події</a>
+              </li>
+            </ul>
+            <ul class="nav__item">
+              <li class="nav__list">
+                <a href="#subscription" class="nav__link">Про Нас</a>
+              </li>
+              <li class="nav__list">
+                <a href="#contacts" class="nav__link">Контакти</a>
+              </li>
+            </ul>
+          </div>
+
+          <div class="menu__line"></div>
+
+          <div class="menu__timetable timetable">
+            <div class="timetable__week">
+              <div class="timetable__title">Графік роботи</div>
+              <div class="timetable__day">
+                <strong>12:00 — 20:00</strong> середа
+              </div>
+              <div class="timetable__day">
+                <strong>12:00 — 20:00</strong> четвер
+              </div>
+              <div class="timetable__day">
+                <strong>12:00 — 20:00</strong> п'ятниця
+              </div>
+              <div class="timetable__day">
+                <strong>11:00 — 19:00</strong> субота
+              </div>
+              <div class="timetable__day">
+                <strong>11:00 — 19:00</strong> неділя
+              </div>
+            </div>
+            <div class="timetable__remark">
+              <strong>Вихідні:</strong> понеділок, вівторок
+              <br>
+              Каса припиняє роботу за 1 годину до закриття музею
+            </div>
           </div>
         </div>
-
-        <ul class="menu__list">
-          <li class="menu__item">
-            <a href="#" class="menu__link">Про Нас</a>
-          </li>
-
-          <li class="menu__item">
-            <a href="#events" class="menu__link">Виставки та події</a>
-          </li>
-
-          <li class="menu__item">
-            <a href="#gallery" class="menu__link">Галерея</a>
-          </li>
-
-          <li class="menu__item">
-            <a href="#subscribe" class="menu__link">Підписатися</a>
-          </li>
-
-          <li class="menu__item">
-            <a href="#contact-us" class="menu__link">Контакти</a>
-          </li>
-        </ul>
       </div>
     </nav>
 
