slider section was added

--- a/src/index.html
+++ b/src/index.html
@@ -6,12 +6,32 @@
 
     <title>NAMU</title>
 
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@300;400;500;700&family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
+    <link
+      rel="preconnect"
+      href="https://fonts.googleapis.com"
+    >
+    <link
+      rel="preconnect"
+      href="https://fonts.gstatic.com"
+    >
+    <link
+      href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@300;400;500;700&family=Montserrat:wght@400;700&display=swap"
+      rel="stylesheet"
+    >
 
-    <link rel="stylesheet" href="./styles/main.scss">
-    <link rel="icon" href="./images/logo.svg">
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.css"
+    >
+
+    <link
+      rel="stylesheet"
+      href="./styles/main.scss"
+    >
+    <link
+      rel="icon"
+      href="./images/logo.svg"
+    >
 
   </head>
   <body class="page__body">
@@ -199,6 +219,102 @@
         </div>
       </section>
 
+      <section class="page__section gallery" id="gallery">
+        <div class="container">
+          <h2 class="title page__section-title">
+            Галерея
+          </h2>
+
+          <div class="gallery__place">
+            <div class="gallery__place-photos">
+              <div class="grid">
+                <img
+                  class="gallery__place-photos-photo--1"
+                  src="./images/slider/1.jpg"
+                  alt="Жінка в традиційному одязі"
+                >
+
+                <img
+                  src="./images/slider/2.jpg"
+                  alt="Зимовий пейзаж"
+                  class="gallery__place-photos-photo--2"
+                >
+              </div>
+            </div>
+
+            <div class="gallery__place-photos">
+              <div class="grid">
+                <img
+                  class="gallery__place-photos-photo--3"
+                  src="./images/slider/3.jpg"
+                  alt="Дівчина у парку"
+                >
+
+                <img
+                  src="./images/slider/4.jpg"
+                  alt="Морський пейзаж"
+                  class="gallery__place-photos-photo--4"
+                >
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <section class="page__section slider">
+        <div class="container">
+          <h2 class="page__section-title">
+            Галерея
+          </h2>
+
+          <div class="slider__slider swiper-container">
+            <div class="slider__wrapper swiper-wrapper">
+              <div class="slider__slide swiper-slide">
+                <img
+                  class="slider__slide-image"
+                  src="./images/slider/1.jpg"
+                  alt="Жінка в традиційному одязі"
+                >
+              </div>
+
+              <div class="slider__slide swiper-slide">
+                <img
+                  class="slider__slide-image"
+                  src="./images/slider/5.jpg"
+                  alt="Гуси"
+                >
+              </div>
+
+              <div class="slider__slide swiper-slide">
+                <img
+                  class="slider__slide-image"
+                  src="./images/slider/2.jpg"
+                  alt="Зимовий пейзаж"
+                >
+              </div>
+
+              <div class="slider__slide swiper-slide">
+                <img
+                  class="slider__slide-image"
+                  src="./images/slider/3.jpg"
+                  alt="Дівчина у парку"
+                >
+              </div>
+
+              <div class="slider__slide swiper-slide">
+                <img
+                  class="slider__slide-image"
+                  src="./images/slider/4.jpg"
+                  alt="Морський пейзаж"
+                >
+              </div>
+            </div>
+
+            <div class="slider__pagination-bullet swiper-pagination"></div>
+          </div>
+        </div>
+      </section>
+
       <section class="subscribe">
         <div class="container grid">
           <h2 class="title subscribe__title">
@@ -361,6 +477,7 @@
       </div>
     </footer>
 
+    <script src="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.js"></script>
     <script src="scripts/main.js"></script>
   </body>
 </html>
