add links to icons

--- a/src/index.html
+++ b/src/index.html
@@ -354,8 +354,8 @@
           </a>
 
           <div class="footer__social">
-            <a href="#" class="icon icon--facebook"></a>
-            <a href="#" class="icon icon--instagram"></a>
+            <a href="https://www.facebook.com/" class="icon icon--facebook"></a>
+            <a href="https://www.instagram.com/" class="icon icon--instagram"></a>
           </div>
         </div>
 
