--- a/src/index.html
+++ b/src/index.html
@@ -28,7 +28,7 @@
             <br>
             МУЗЕЙ
           </h1>
-          <a href="#" class="header__tickets grid__item--tablet-1-3 grid__item--desktop-3-5">
+          <a href="#subscribe" class="header__tickets grid__item--tablet-1-3 grid__item--desktop-3-5">
             <div class="header__tickets-link">
               КВИТКИ
             </div>
@@ -182,7 +182,7 @@
                 ЛЕКЦІЯ
               </div>
               <div class="lection__information-date">
-                26.08-29.11.2019
+                26/08/2019 - 11:00
               </div>
             </div>
             <a href="#" class="lection__title">
