added finale changes

--- a/src/index.html
+++ b/src/index.html
@@ -53,6 +53,10 @@
               <img src="./images/arrow-button-white.svg" alt="arrow icon">
             </div>
           </a>
+          <div class="header__decoration">
+            <span class="header__decorative-text">ПОДІЇ</span>
+            <div class="header__line"></div>
+          </div>
         </div>
       </div>
     </header>
@@ -98,7 +102,7 @@
       </div>
     </div>
     <main class="main">
-      <section class="section events" id="events">
+      <section class="section section--reveal events" id="events">
         <div class="container">
           <h2 class="section__title">
             Актуальні події
@@ -151,12 +155,19 @@
                 </p>
               </div>
             </li>
-            <li class="events__item events__item--highlighted-event">
-              <img
-              src="./images/sunset-picture.jpg"
-              alt="Woman and bird"
-              class="events__image events__image--full-screen"
-              >
+          </ul>
+        </div>
+
+        <div class="events__higlited">
+          <div class="events__image-container">
+            <img
+          src="./images/sunset-picture.jpg"
+          alt="sunset picture"
+          class="events__image events__image--full-screen"
+          >
+          </div>
+          <div class="container">
+            <div class="events__item events__item--highlighted-event">
               <div class="events__content events__content--highlighted-event">
                 <div class="events__top events__top--highlighted-event">
                   <span class="events__type">
@@ -170,11 +181,12 @@
                   Від класицизму до<br>романтизму
                 </p>
               </div>
-            </li>
-          </ul>
+            </div>
+          </div>
         </div>
+
       </section>
-      <section class="section gallery" id="gallery">
+      <section class="section section--reveal gallery" id="gallery">
         <div class="container">
           <h2 class="section__title">
             Галерея
@@ -241,7 +253,7 @@
 
         </div>
       </section>
-      <section class="section follow" id="subscribe">
+      <section class="section section--reveal follow" id="subscribe">
         <div class="container">
           <div class="follow__content">
             <h2 class="section__title section__title--follow">
@@ -274,10 +286,18 @@
               NA<br>MU
             </a>
             <div class="footer__social">
-              <a href="https://www.facebook.com/namu.museum/?locale=uk_UA" class="icon icon--facebook">
+              <a
+               href="https://www.facebook.com/namu.museum/?locale=uk_UA"
+               class="icon icon--facebook"
+               target="_blank"
+              >
                 <img src="./images/facebook.svg" alt="icon facebook">
               </a>
-              <a href="https://instagram.com/namu.museum?igshid=YmMyMTA2M2Y=" class="icon icon--instagram">
+              <a
+               href="https://instagram.com/namu.museum?igshid=YmMyMTA2M2Y="
+               class="icon icon--instagram"
+               target="_blank"
+              >
                 <img src="./images/instagram.svg" alt="icon instagram">
               </a>
             </div>
@@ -304,12 +324,13 @@
               <a
                href="https://goo.gl/maps/hMTiMdUgK9kp8bka6"
                class="footer__contact"
-               target="_blank">
+               target="_blank"
+              >
                вул. М. Грушевського, 6; Київ, 01001
               </a><br>
               <a href="tel:+38 (044) 278-13-57" class="footer__contact">тел. +38 (044) 278-13-57</a><br>
               <a href="fax:+38 (044) 278-74-54" class="footer__contact">факс +38 (044) 278-74-54</a><br>
-              <a href="mailto:info@namu.kiev.ua" class="footer__contact">e-mail: info@namu.kiev.ua</a>
+              <a href="mailto:info@namu.kyiv.ua" class="footer__contact">e-mail: info@namu.kyiv.ua</a>
             </div>
           </div>
 
