--- a/src/index.html
+++ b/src/index.html
@@ -52,7 +52,7 @@
                 <h1 class="header__title">
                   ХУДОЖНІЙ МУЗЕЙ
                 </h1>
-                <a href="#" class="header__button">
+                <a href="#events" class="header__button">
                   <div class="header__button--tickets">
                     КВИТКИ
                   </div>
@@ -80,7 +80,7 @@
         <h1 class="header__title">
           ХУДОЖНІЙ МУЗЕЙ
         </h1>
-        <a href="#" class="header__button">
+        <a href="#events" class="header__button">
           <div class="header__button--tickets">
             КВИТКИ
           </div>
@@ -443,7 +443,6 @@
                   </li>
                   <li class="contacts__list--item">
                     <a 
-                      target="_blank"
                       class="contacts__list--item-contact"
                       href="tel:+38 (044) 278-13-57"
                     >
