--- a/src/index.html
+++ b/src/index.html
@@ -63,13 +63,13 @@
 
           <ul class="menu__list">
             <li class="menu__list-item">
-              <a href="#" class="menu__link">
+              <a href="#gallery" class="menu__link menu__link--desktop">
                 Галерея
               </a>
             </li>
 
             <li class="menu__list-item">
-              <a href="#" class="menu__link">
+              <a href="#form" class="menu__link">
                 Про Нас
               </a>
             </li>
@@ -229,15 +229,15 @@
             <div class="gallery__place-photos">
               <div class="grid">
                 <img
-                  class="gallery__place-photos-photo--1"
+                  class="gallery__place-photos-photo gallery__place-photos-photo--1"
                   src="./images/slider/1.jpg"
                   alt="Жінка в традиційному одязі"
                 >
 
                 <img
+                  class="gallery__place-photos-photo gallery__place-photos-photo--2"
                   src="./images/slider/2.jpg"
                   alt="Зимовий пейзаж"
-                  class="gallery__place-photos-photo--2"
                 >
               </div>
             </div>
@@ -245,27 +245,19 @@
             <div class="gallery__place-photos">
               <div class="grid">
                 <img
-                  class="gallery__place-photos-photo--3"
+                  class="gallery__place-photos-photo gallery__place-photos-photo--3"
                   src="./images/slider/3.jpg"
                   alt="Дівчина у парку"
                 >
 
                 <img
+                  class="gallery__place-photos-photo gallery__place-photos-photo--4"
                   src="./images/slider/4.jpg"
                   alt="Морський пейзаж"
-                  class="gallery__place-photos-photo--4"
                 >
               </div>
             </div>
           </div>
-        </div>
-      </section>
-
-      <section class="page__section slider">
-        <div class="container">
-          <h2 class="page__section-title">
-            Галерея
-          </h2>
 
           <div class="slider__slider swiper-container">
             <div class="slider__wrapper swiper-wrapper">
@@ -310,12 +302,12 @@
               </div>
             </div>
 
-            <div class="slider__pagination-bullet swiper-pagination"></div>
+            <div class="swiper-pagination"></div>
           </div>
         </div>
       </section>
 
-      <section class="subscribe">
+      <section class="subscribe" id="form">
         <div class="container grid">
           <h2 class="title subscribe__title">
             Підписка
@@ -342,7 +334,7 @@
       </section>
     </main>
 
-    <footer class="footer" id="#footer">
+    <footer class="footer" id="footer">
       <div class="container grid">
         <div class="footer__links">
           <a href="#" class="footer__logo">
@@ -354,8 +346,39 @@
           </a>
 
           <div class="footer__social">
-            <a href="https://www.facebook.com/" class="icon icon--facebook"></a>
-            <a href="https://www.instagram.com/" class="icon icon--instagram"></a>
+            <a
+              class="footer__icon"
+              href="https://www.facebook.com/"
+              target="_blank"
+            >
+              <svg
+                width="24"
+                height="24"
+                viewbox="0 0 24 24"
+                fill="currentColor"
+                xmlns="http://www.w3.org/2000/svg"
+              >
+                <path d="M8.82075 4.64902C8.82075 5.25383 8.82075 7.95334 8.82075 7.95334H6.3999V11.9939H8.82075V24.0009H13.7937V11.9942H17.1308C17.1308 11.9942 17.4433 10.0568 17.5948 7.93844C17.1604 7.93844 13.8125 7.93844 13.8125 7.93844C13.8125 7.93844 13.8125 5.58779 13.8125 5.17576C13.8125 4.76285 14.3547 4.20743 14.8906 4.20743C15.4255 4.20743 16.5544 4.20743 17.6 4.20743C17.6 3.6573 17.6 1.7565 17.6 0.00100709C16.2042 0.00100709 14.6161 0.00100709 13.9161 0.00100709C8.69782 0.000728099 8.82075 4.04527 8.82075 4.64902Z">
+              </svg>
+            </a>
+
+            <a
+              class="footer__icon"
+              href="https://www.instagram.com/"
+              target="_blank"
+            >
+              <svg
+                width="25"
+                height="24"
+                viewbox="0 0 25 24"
+                fill="currentColor"
+                xmlns="http://www.w3.org/2000/svg"
+              >
+                <path d="M18.4658 0H7.45897C3.8767 0 0.962402 2.9143 0.962402 6.49657V17.5036C0.962402 21.0857 3.8767 24 7.45897 24H18.466C22.0481 24 24.9624 21.0857 24.9624 17.5036V6.49657C24.9624 2.9143 22.0481 0 18.4658 0V0ZM12.9624 18.5623C9.34386 18.5623 6.40007 15.6185 6.40007 12C6.40007 8.38145 9.34386 5.43767 12.9624 5.43767C16.5809 5.43767 19.5247 8.38145 19.5247 12C19.5247 15.6185 16.5809 18.5623 12.9624 18.5623ZM19.6816 6.98528C18.6123 6.98528 17.7425 6.11553 17.7425 5.04619C17.7425 3.97686 18.6123 3.10693 19.6816 3.10693C20.7509 3.10693 21.6209 3.97686 21.6209 5.04619C21.6209 6.11553 20.7509 6.98528 19.6816 6.98528Z" fill="currentColor"></path>
+                <path d="M12.9625 6.84467C10.1199 6.84467 7.80713 9.15728 7.80713 12C7.80713 14.8425 10.1199 17.1553 12.9625 17.1553C15.8052 17.1553 18.1178 14.8425 18.1178 12C18.1178 9.15728 15.8052 6.84467 12.9625 6.84467Z">
+                  <path d="M19.6815 4.5141C19.3882 4.5141 19.1494 4.75287 19.1494 5.0462C19.1494 5.33954 19.3882 5.57831 19.6815 5.57831C19.975 5.57831 20.2138 5.33972 20.2138 5.0462C20.2138 4.75269 19.975 4.5141 19.6815 4.5141Z">
+              </svg>
+            </a>
           </div>
         </div>
 
@@ -411,25 +434,41 @@
 
             <ul class="footer__contacts-list">
               <li class="footer__contacts-item">
-                <a href="https://goo.gl/maps/hUATkK8CJtYZkMAt9" class="footer__contacts-link">
+                <a
+                  class="footer__contacts-link"
+                  href="https://goo.gl/maps/hUATkK8CJtYZkMAt9"
+                  target="_blank"
+                >
                   вул. М. Грушевського, 6; Київ, 01001
                 </a>
               </li>
 
               <li class="footer__contacts-item">
-                <a href="tel:+380442781357" class="footer__contacts-link">
+                <a
+                  class="footer__contacts-link"
+                  href="tel:+380442781357"
+                  target="_blank"
+                >
                   тел. +38 (044) 278-13-57
                 </a>
               </li>
 
               <li class="footer__contacts-item">
-                <a href="tel:+380442787454" class="footer__contacts-link">
+                <a
+                  class="footer__contacts-link"
+                  href="tel:+380442787454"
+                  target="_blank"
+                >
                   факс. +38 (044) 278-74-54
                 </a>
               </li>
 
               <li class="footer__contacts-item">
-                <a href="mailto:info@namu.kiev.ua" class="footer__contacts-link">
+                <a
+                  class="footer__contacts-link"
+                  href="mailto:info@namu.kiev.ua"
+                  target="_blank"
+                >
                   e-mail: info@namu.kiev.ua
                 </a>
               </li>
@@ -467,7 +506,7 @@
 
         <div class="footer__copyright">
           <p class="footer__copyright-text">
-            Copyright &copy; 2019. All Rights Reserved.
+            Copyright &copy; 2023. All Rights Reserved.
           </p>
 
           <p class="footer__copyright-text">
