--- a/src/index.html
+++ b/src/index.html
@@ -137,11 +137,12 @@
             >
             </a>
 
-            <img
-              src="images/icons/logo.svg"
-              alt="logo"
+            <a
+              href="#home"
               class="header__logo logo"
             >
+            </a>
+
             <div class="header__background">
               <img src="images/1.png" alt="image">
             </div>
@@ -356,11 +357,11 @@
             grid--tablet--1-2
             grid--desktop--1-3"
           >
-            <img
-              src="images/icons/logo.svg"
-              alt="logo"
+            <a
+              href="#home"
               class="footer__logo logo"
             >
+            </a>
 
             <div class="footer__messengers">
               <a
