--- a/src/index.html
+++ b/src/index.html
@@ -115,6 +115,7 @@
 
         <div class="museum__positional">
           <div class="museum__events">
+            <div class="museum__line"></div>
             <a href="#" class="museum__events--text">події</a>
           </div>
         </div>
