--- a/src/index.html
+++ b/src/index.html
@@ -72,7 +72,7 @@
             </div>
           </div>
           <div class="header__decorLine">
-            <div class="header__decorLine--events">ПОДІЇ</div>
+            <a href="#events" class="header__decorLine--events">ПОДІЇ</a>
           </div>
         </div>
       </div>
