--- a/src/index.html
+++ b/src/index.html
@@ -231,23 +231,25 @@
       </div>
     </section>
     <section class="section lecture" id="lecture">
-      <img 
-        class="lecture__image" 
-        src="./images/events/events3.jpg" 
-        alt="lecture"
-      >
-      <div class="lecture__box">
-        <div class="lecture__box--subtitle">
-          <h4 class="lecture__box--subtitle-name">
-            ЛЕКЦІЯ
-          </h4>
-          <p class="lecture__box--subtitle-date">
-            26/08/2019 - 11:00
-          </p>
+      <div class="lecture__container">
+        <img 
+          class="lecture__image" 
+          src="./images/events/events3.jpg" 
+          alt="lecture"
+        >
+        <div class="lecture__box">
+          <div class="lecture__box--subtitle">
+            <h4 class="lecture__box--subtitle-name">
+              ЛЕКЦІЯ
+            </h4>
+            <p class="lecture__box--subtitle-date">
+              26/08/2019 - 11:00
+            </p>
+          </div>
+          <h3 class="lecture__box--title">
+            Від класицизму до романтизму
+          </h3>
         </div>
-        <h3 class="lecture__box--title">
-          Від класицизму до романтизму
-        </h3>
       </div>
     </section>
     <section class="section gallery" id="gallery">
