--- a/src/index.html
+++ b/src/index.html
@@ -258,10 +258,10 @@
 
           <div class="slider gallery__slider">
             <div class="slider__slides-container">
-              <div class="slider__slide slider__slide--1" id="slide1"></div>
-              <div class="slider__slide slider__slide--2" id="slide2"></div>
-              <div class="slider__slide slider__slide--3" id="slide3"></div>
-              <div class="slider__slide slider__slide--4" id="slide4"></div>
+              <div class="slider__slide slider__slide--1"></div>
+              <div class="slider__slide slider__slide--2"></div>
+              <div class="slider__slide slider__slide--3"></div>
+              <div class="slider__slide slider__slide--4"></div>
             </div>
 
             <div class="slider__nav">
